--- a/index.html
+++ b/index.html
@@ -105,9 +105,6 @@
         <div class="tab-panel" id="cloud" style="display:block; margin-top:12px">
           <h3>Cloud – Resumen</h3>
           <div class="item"><strong>Cloud 360</strong> — <a class="btn" href="https://www.tigo.com.gt/medianas/cloud/cloud-360" target="_blank">Ver</a></div>
-          <div class="item"><strong>Teams Phone</strong> — <a class="btn" href="https://www.tigo.com.gt/medianas/cloud/microsoft-teams-phone-system" target="_blank">Ver</a></div>
-          <div class="item"><strong>Webex Calling</strong> — <a class="btn" href="https://www.tigo.com.gt/medianas/cloud/webex-calling" target="_blank">Ver</a></div>
-          <div class="item"><strong>Cloud Azure</strong> — <a class="btn" href="https://www.tigo.com.gt/medianas/cloud/cloud-azure" target="_blank">Ver</a></div>
         </div>
 
         <div class="tab-panel" id="conectividad" style="display:none; margin-top:12px">
@@ -132,7 +129,11 @@
 
       </section>
 
-      <footer>Información interna — Tigo Guatemala</footer>
+      <footer>
+        Información interna — Tigo Guatemala  
+        <br>
+        <strong>Creado por Ivan Waldir Céspedes en colaboración con Adriana Antezana Antezana</strong>
+      </footer>
 
     </main>
 
