--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <h3>🔗 Enlaces rápidos</h3>
       <ul class="side-list">
-        <li><a href="https://integrations.tigo.com.gt/horus-client/profile/telefonos/comparar" target="_blank">Horus • Comparador</a></li>
+        <li><a href="https://......" target="_blank">Aqui agregar enlaces</a></li>
         <li><a href="https://www.tigo.com.gt/medianas" target="_blank">Tigo Medianas</a></li>
       </ul>
 
@@ -204,3 +204,4 @@
 
 </body>
 </html>
+
